--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,12 @@ authors = ["Artem Nechai <lenikol95@mail.ru>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
+python-telegram-bot = "^13.12"
 
+
+[tool.poetry.group.dev.dependencies]
+wemake-python-styleguide = "^0.16.1"
+mypy = "^0.961"
 
 [build-system]
 requires = ["poetry-core"]
