add redis to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = ["Artem Nechai <lenikol95@mail.ru>"]
 python = "^3.9"
 python-telegram-bot = "^13.12"
 python-dotenv = "^0.20.0"
+redis = "^4.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
