--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -13,7 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
-      - name: updating dpendencies and do linter check
+      - name: Install dependencies
         run: |
           make full-install
+      - name: Linter check with wemake-python-styleguide and mypy
+        run: |
           make lint
