--- a/.github/workflows/linter-check.yml
+++ b/.github/workflows/linter-check.yml
@@ -18,4 +18,4 @@ jobs:
           make full-install
       - name: Linter check with wemake-python-styleguide and mypy
         run: |
-          make lint
+          make lint-pipeline
