--- a/setup.cfg
+++ b/setup.cfg
@@ -23,11 +23,16 @@ per-file-ignores =
     bots/telegram_bot.py:
         # '%' formatting is acceptable for logging config:
         WPS323
-        # common pattern for telegram filter:
-        WPS465
     bots/vkontakte_bot.py:
         # '%' formatting is acceptable for logging config:
         WPS323
+    bots/settings.py:
+        # upper-case constant in class is a common pattern for Enum:
+        WPS115
+        # f-string complexity is ok:
+        WPS237
+        # add to excluions due to choosen concatenation way:
+        W503
 
 ignore =
     # f-strings are acceptable:
@@ -37,5 +42,9 @@ ignore =
 
 [isort]
 include_trailing_comma = true
+multi_line_output = 5
 # Should be: max-line-length - 1
 line_length = 99
+
+[mypy]
+warn_no_return = False
