--- a/setup.cfg
+++ b/setup.cfg
@@ -6,12 +6,13 @@ statistics = False
 doctests = True
 enable-extensions = G
 count = True
-max-string-usages = 4
+max-string-usages = 6
 max-local-variables = 10
 max-line-length = 100
 max-module-members = 10
 max-complexity = 8
 max-expressions = 12
+max-import-from-members = 12
 
 # Plugins:
 accept-encodings = utf-8
@@ -23,6 +24,8 @@ per-file-ignores =
     bots/telegram_bot.py:
         # '%' formatting is acceptable for logging config:
         WPS323
+        # f-string complexity is ok:
+        WPS237
     bots/vkontakte_bot.py:
         # '%' formatting is acceptable for logging config:
         WPS323
@@ -39,6 +42,8 @@ ignore =
     WPS305
     # no security/cryptographic purposes in project:
     S311
+    # walrus operator is acceptable:
+    WPS332
 
 [isort]
 include_trailing_comma = true
