--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 python-telegram-bot = "^13.12"
 python-dotenv = "^0.20.0"
 redis = "^4.3.3"
+vk-api = "^11.9.8"
 
 
 [tool.poetry.group.dev.dependencies]
