--- a/setup.cfg
+++ b/setup.cfg
@@ -53,4 +53,7 @@ multi_line_output = 5
 line_length = 99
 
 [mypy]
-warn_no_return = False
+pretty = True
+
+[mypy-vk_api.*]
+ignore_missing_imports = True
