add rules for mypy

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,8 @@ line_length = 99
 
 [mypy]
 pretty = True
+show_error_codes = true
+disallow_untyped_defs = true
 
 [mypy-vk_api.*]
 ignore_missing_imports = True
