add solution attempts handler vk

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,8 @@ per-file-ignores =
     bots/vkontakte_bot.py:
         # '%' formatting is acceptable for logging config:
         WPS323
+        # negated condition is necessary here:
+        WPS504
     bots/settings.py:
         # upper-case constant in class is a common pattern for Enum:
         WPS115
