add logging to vk bot

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,7 @@ max-complexity = 8
 max-expressions = 12
 max-import-from-members = 12
 max-cognitive-score = 25
+max-imports = 13
 
 # Plugins:
 accept-encodings = utf-8
