--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,11 @@ per-file-ignores =
         WPS237
         # add to excluions due to choosen concatenation way:
         W503
+    bots/upload_quiz.py:
+        # f-string complexity is ok:
+        WPS237
+        # '%' formatting is acceptable for logging config:
+        WPS323
 
 ignore =
     # f-strings are acceptable:
