get rid of settings.py

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ per-file-ignores =
         WPS323
         # negated condition is necessary here:
         WPS504
-    bots/settings.py:
+    bots/constants.py:
         # upper-case constant in class is a common pattern for Enum:
         WPS115
         # f-string complexity is ok:
